--- a/sistema_metodos_agiles/webApp/templates/home/tipoUSImportar.html
+++ b/sistema_metodos_agiles/webApp/templates/home/tipoUSImportar.html
@@ -16,6 +16,9 @@
       <table id="table" class="display" style="width:100%">
         <thead class=" text-primary">
           <th>
+            
+          </th>
+          <th>
             Nombre de tipo de US
           </th>
           <th>
@@ -33,7 +36,9 @@
         <tbody>
           {% for tipo in todostipoUs %}
           <tr>
-
+            <td>
+              {{forloop.counter}}
+            </td>  
             <td>
               {{tipo.nombre_tipo_us}}
             </td>
@@ -44,10 +49,11 @@
               {{tipo.fases}}
             </td>
             <td>
-              {{tipo.proyecto_tipo_us}}
+              <!--{{tipo.proyecto_tipo_us}}-->
+              {{proyecto}}
             </td>
             <td>
-              <form method="post" action="{% url 'webApp:importarTusDeProyecto' proyecto.id %}">
+              <form action="{% url 'webApp:importarTusDeProyecto' proyecto.id %}" method="POST">
                 {% csrf_token %}
                 <input type="text" name="idTipoUs" value="{{tipo.id}}" hidden="true">
                 <button type="submit" class="btn btn-primary btn-sm">Importar</button>
