--- a/sistema_metodos_agiles/webApp/templates/home/rolesProyectoCrear.html
+++ b/sistema_metodos_agiles/webApp/templates/home/rolesProyectoCrear.html
@@ -44,4 +44,8 @@
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
-{% block javascripts %}{% endblock javascripts %}
+{% block javascripts %}
+<script>
+  
+</script>
+{% endblock javascripts %}
