--- a/sistema_metodos_agiles/webApp/templates/home/sprint.html
+++ b/sistema_metodos_agiles/webApp/templates/home/sprint.html
@@ -9,7 +9,7 @@
 {% include 'includes/options.html' %}
 <h2>Sprint</h2>
 
-{% if validacionPermisos.crt_US %}
+{% if validacionPermisos.crt_Sprint %}
 <a class="btn btn-primary btn-sm" href="{% url 'webApp:sprintCrear' proyecto.id %}"><i class="material-icons">add</i>Crear
   Nuevo Sprint</a>
 {% endif %}
@@ -31,19 +31,19 @@
 
         </div>
         <div class="col-4 d-flex flex-column">
-          {% if True %}
+          {% if validacionPermisos.dsp_Colaborador_Sprint %}
           <a href="{% url 'webApp:sprintColaboradores' proyecto.id sp.id %}" class="btn btn-sm btn-primary">Colaboradores</a>
           {% endif %}
           
-          {% if True %}
+          {% if validacionPermisos.dsp_Colaborador_Sprint %}
           <a href="{% url 'webApp:sprintUsAgregar' proyecto.id sp.id %}" class="btn btn-sm btn-primary">Agregar US</a>
           {% endif %}
 
-          {% if True %}
+          {% if validacionPermisos.dsp_Tablero %}
           <a href="{% url 'webApp:sprintTablero' proyecto.id sp.id 0 %}" class="btn btn-sm btn-primary">Tablero</a>
           {% endif %}
 
-          {% if True %}
+          {% if validacionPermisos.dsp_SprinBack %}
           <a href="{% url 'webApp:sprintBacklog' proyecto.id sp.id %}" class="btn btn-sm btn-primary">Sprint Backlog</a>
           {% endif %}
         </div>
