--- a/sistema_metodos_agiles/webApp/templates/home/vistaProyectos.html
+++ b/sistema_metodos_agiles/webApp/templates/home/vistaProyectos.html
@@ -18,15 +18,30 @@
 
             {% if proyecto.estado.descripcion == "PENDIENTE" %}
             <h3 class="card-title">
+                {% if validacionPermisos.ini_Proyecto %}
                 <small><a class="btn btn-sm btn-success" href="{% url 'webApp:iniciarProyecto' proyecto.id %}">Iniciar Proyecto</a></small>
+                {% endif %}
+                {% if validacionPermisos.upd_Proyecto %}
                 <small><a class="btn btn-sm btn-info" href="{% url 'webApp:editarProyecto' proyecto.id %}">Editar</a></small>
+                {% endif %}
+            </h3>
+            {% endif %}
+            {% if proyecto.estado.descripcion == "EN PROGRESO" %}
+            <h3 class="card-title">
+                <small>Fecha Inicio: {{proyecto.fecha_ini_proyecto}}</small>
+            </h3>
+            <h3 class="card-title">
+                <small>Fecha Fin: {{proyecto.fecha_fin_proyecto}}</small>
+            </h3>
+            <h3 class="card-title">
+                <small>Dias Sprint: {{proyecto.sprint_dias}}</small>
             </h3>
             {% endif %}
 
           </div>
         </div>
         {% if proyecto.estado.descripcion == "EN PROGRESO" %}
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-md-12 mx-3 p-3">
               <div class="card">
                 <div class="card-header">
@@ -77,158 +92,13 @@
                 </div>
               </div>
             </div>
-        </div>
+        </div> -->
 
           {% endif %}
     
 
 </div>
 
-<!-- <div class="container-fluid">
-    <h3 class=" ">Tabla Kamban</h3>
-    <div class="row flex-row flex-sm-nowrap py-3">
-        <div class="col-sm-6 col-md-4 col-xl-3">
-            <div class="card ">
-                <div class="card-body">
-                    <h6 class=" text-uppercase text-truncate py-2">To Do</h6>
-                    <div class="items border border-light">
-                        <div class="card draggable shadow-sm" id="cd1" draggable="true" ondragstart="drag(event)">
-                            <div class="card-body p-2">
-                                <div class="card-title">
-                                    <img src="//via.placeholder.com/30" class="rounded-circle float-right">
-                                    <a href="" class="lead ">TSK-154</a>
-                                </div>
-                                <p>
-                                    This is a description of a item on the board.
-                                </p>
-                                <button class="btn btn-primary btn-sm">View</button>
-                            </div>
-                        </div>
-                        <div class="dropzone rounded" ondrop="drop(event)" ondragover="allowDrop(event)" ondragleave="clearDrop(event)"> &nbsp; </div>
-                        <div class="card draggable shadow-sm" id="cd2" draggable="true" ondragstart="drag(event)">
-                            <div class="card-body p-2">
-                                <div class="card-title">
-                                    <img src="//via.placeholder.com/30" class="rounded-circle float-right">
-                                    <a href="" class="lead ">TSK-156</a>
-                                </div>
-                                <p>
-                                    This is a description of a item on the board.
-                                </p>
-                                <button class="btn btn-primary btn-sm">View</button>
-                            </div>
-                        </div>
-                        <div class="dropzone rounded" ondrop="drop(event)" ondragover="allowDrop(event)" ondragleave="clearDrop(event)"> &nbsp; </div>
-                        <div class="card draggable shadow-sm" id="cd3" draggable="true" ondragstart="drag(event)">
-                            <div class="card-body p-2">
-                                <div class="card-title">
-                                    <img src="//via.placeholder.com/30" class="rounded-circle float-right">
-                                    <a href="" class="lead ">TSK-157</a>
-                                </div>
-                                <p>
-                                    This is an item on the board. There is some descriptive text that explains the item here.
-                                </p>
-                                <button class="btn btn-primary btn-sm">View</button>
-                            </div>
-                        </div>
-                        <div class="dropzone rounded" ondrop="drop(event)" ondragover="allowDrop(event)" ondragleave="clearDrop(event)"> &nbsp; </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-xl-3">
-            <div class="card ">
-                <div class="card-body">
-                    <h6 class="card-title text-uppercase text-truncate py-2">In-progess</h6>
-                    <div class="items border border-light">
-                        <div class="card draggable shadow-sm" id="cd1" draggable="true" ondragstart="drag(event)">
-                            <div class="card-body p-2">
-                                <div class="card-title">
-                                    <img src="//via.placeholder.com/30" class="rounded-circle float-right">
-                                    <a href="" class="lead ">TSK-152</a>
-                                </div>
-                                <p>
-                                    This is a task that is being worked on.
-                                </p>
-                                <button class="btn btn-primary btn-sm">View</button>
-                            </div>
-                        </div>
-                        <div class="dropzone rounded" ondrop="drop(event)" ondragover="allowDrop(event)" ondragleave="clearDrop(event)"> &nbsp; </div>
-                        <div class="card draggable shadow-sm" id="cd2" draggable="true" ondragstart="drag(event)">
-                            <div class="card-body p-2">
-                                <div class="card-title">
-                                    <img src="//via.placeholder.com/30" class="rounded-circle float-right">
-                                    <a href="" class="lead ">TSK-153</a>
-                                </div>
-                                <p>
-                                    Another task here that is in progress.
-                                </p>
-                                <button class="btn btn-primary btn-sm">View</button>
-                            </div>
-                        </div>
-                        <div class="dropzone rounded" ondrop="drop(event)" ondragover="allowDrop(event)" ondragleave="clearDrop(event)"> &nbsp; </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-xl-3">
-            <div class="card ">
-                <div class="card-body">
-                    <h6 class="card-title text-uppercase text-truncate py-2">Review</h6>
-                    <div class="items border border-light">
-                        <div class="card draggable shadow-sm" id="cd9" draggable="true" ondragstart="drag(event)">
-                            <div class="card-body p-2">
-                                <div class="card-title">
-                                    <img src="//via.placeholder.com/30" class="rounded-circle float-right">
-                                    <a href="" class="lead ">TSK-158</a>
-                                </div>
-                                <p>
-                                    This is a description of a item on the board.
-                                </p>
-                                <button class="btn btn-primary btn-sm">View</button>
-                            </div>
-                        </div>
-                        <div class="dropzone rounded" ondrop="drop(event)" ondragover="allowDrop(event)" ondragleave="clearDrop(event)"> &nbsp; </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-xl-3">
-            <div class="card">
-                <div class="card-body">
-                    <h6 class="card-title text-uppercase text-truncate py-2">Complete</h6>
-                    <div class="items border border-light">
-                        <div class="card draggable shadow-sm" id="cd11" draggable="true" ondragstart="drag(event)">
-                            <div class="card-body p-2">
-                                <div class="card-title">
-                                    <img src="//via.placeholder.com/30" class="rounded-circle float-right">
-                                    <a href="" class="lead ">TSK-144</a>
-                                </div>
-                                <p>
-                                    This is a description of an item.
-                                </p>
-                                <button class="btn btn-primary btn-sm">View</button>
-                            </div>
-                        </div>
-                        <div class="dropzone rounded" ondrop="drop(event)" ondragover="allowDrop(event)" ondragleave="clearDrop(event)"> &nbsp; </div>
-                        <div class="card draggable shadow-sm" id="cd12" draggable="true" ondragstart="drag(event)">
-                            <div class="card-body p-2">
-                                <div class="card-title">
-                                    <img src="//via.placeholder.com/30" class="rounded-circle float-right">
-                                    <a href="" class="lead ">TSK-146</a>
-                                </div>
-                                <p>
-                                    This is a description of a task item.
-                                </p>
-                                <button class="btn btn-primary btn-sm">View</button>
-                            </div>
-                        </div>
-                        <div class="dropzone rounded" ondrop="drop(event)" ondragover="allowDrop(event)" ondragleave="clearDrop(event)"> &nbsp; </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
