--- a/sistema_metodos_agiles/webApp/templates/includes/sidebar.html
+++ b/sistema_metodos_agiles/webApp/templates/includes/sidebar.html
@@ -23,7 +23,7 @@
       </li>
       {% endif %}
 
-      {% if validacionPermisos.dsp_SprinBack %}
+      {% if validacionPermisos.dsp_SprinBack and proyecto.estado.descripcion == "EN PROGRESO" %}
       <li class="nav-item">
         <a class="nav-link" href="{% url 'webApp:sprintProyecto' proyecto.id %}">
           <i class="material-icons">schedule</i>
@@ -33,7 +33,7 @@
       {% endif %}
 
 
-      {% if validacionPermisos.dsp_Roles %}
+      {% if validacionPermisos.dsp_Roles and proyecto.estado.descripcion == "EN PROGRESO" %}
       <li class="nav-item">
         <a class="nav-link" href="{% url 'webApp:rolesProyecto' proyecto.id %}">
           <i class="material-icons">block</i>
@@ -41,7 +41,7 @@
         </a>
       </li>
       {% endif %}
-      {% if validacionPermisos.dsp_Colaborador %}
+      {% if validacionPermisos.dsp_Colaborador and proyecto.estado.descripcion == "EN PROGRESO" %}
       <li class="nav-item">
         <a class="nav-link" href="{% url 'webApp:colaboradoresProyecto' proyecto.id %}">
           <i class="material-icons">account_circle</i>
@@ -50,7 +50,7 @@
       </li>
       {% endif %}
 
-      {% if validacionPermisos.dsp_TipoUs %}
+      {% if validacionPermisos.dsp_TipoUs and proyecto.estado.descripcion == "EN PROGRESO" %}
       <li class="class="nav-item"">
         <a class="nav-link " href="{% url 'webApp:tipoUs' proyecto.id %}"  >
             <i class="material-icons">apps</i>
@@ -59,7 +59,7 @@
       </li>
       {% endif %}
 
-      {% if validacionPermisos.dsp_ProductBack %}
+      {% if validacionPermisos.dsp_ProductBack and proyecto.estado.descripcion == "EN PROGRESO" %}
       <li class="class="nav-item"">
         <a class="nav-link " href="{% url 'webApp:verProductBacklog' proyecto.id %}"  >
             <i class="material-icons">backup</i>
@@ -67,7 +67,7 @@
           </a>
       </li>
 
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link collapsed text-truncate" href="#submenu1" data-toggle="collapse" data-target="#submenu1"><i class="fa fa-table"></i> <span class="d-none d-sm-inline">Reportes</span></a>
         <div class="collapse" id="submenu1" aria-expanded="false">
             <ul class="flex-column pl-2 nav">
@@ -75,7 +75,7 @@
                 <li class="nav-item"><a class="nav-link py-0" href="#"><span>Velocity Chart</span></a></li>
             </ul>
         </div>
-    </li>
+    </li> -->
       {% endif %}
 <!-- 
           <li class="nav-item">
