--- a/sistema_metodos_agiles/webApp/templates/home/rolesProyectoEditar.html
+++ b/sistema_metodos_agiles/webApp/templates/home/rolesProyectoEditar.html
@@ -29,8 +29,7 @@
         </div>
         <div class="form-group">
           <select class="form-select" multiple aria-label="multiple select example" name="permisos" value="{{rolEditar.getPermisos}}">
-            <option selected disabled>Seleccionar los permisos</option>
-            {% for seleccionado in rolEditar.permisos %}
+            {% for seleccionado in permisosSelect %}
             <option value="{{seleccionado.id}}" selected>{{seleccionado.descripcion_permiso}}</option>
             {% endfor %}
             {% for permiso in permisos %}
