--- a/sistema_metodos_agiles/webApp/templates/home/sprintBackLog.html
+++ b/sistema_metodos_agiles/webApp/templates/home/sprintBackLog.html
@@ -18,6 +18,7 @@
               <h3 class="card-title">{{userStory.us.nombre_us}}</h3>
               <p class="card-category">{{userStory.us.descripcion_us}}</p>
               <p class="card-category"><strong>Tipo de US</strong> {{userStory.us.tipo_us}}</p>
+              <p class="card-category"><strong>Fase</strong> {{userStory.us.fase.nombre_fase}}</p>
               <p class="card-category"><strong>Tiempo Estimado</strong> {{userStory.us.tiempoEstimado_us}} hs</p>
             </div>
             <div class="card-body">
