--- a/sistema_metodos_agiles/webApp/templates/layouts/base.html
+++ b/sistema_metodos_agiles/webApp/templates/layouts/base.html
@@ -84,6 +84,7 @@
   
   {% endblock javascripts %}
   <script type="text/javascript" src="{% static 'index.js' %}"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
   <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
   <script>
