--- a/sistema_metodos_agiles/webApp/templates/home/sprintCrear.html
+++ b/sistema_metodos_agiles/webApp/templates/home/sprintCrear.html
@@ -11,10 +11,10 @@
   <div class="card">
     <div class="card-header">
       <h3>Crear Nuevo Sprint</h3>
-      
+
     </div>
     <div class="card-body">
-      <form method="post" action="{% url 'webApp:sprintCrearGuardar' proyecto.id %}">
+      <form method="post" id="formSprint" action="{% url 'webApp:sprintCrearGuardar' proyecto.id %}">
         {% csrf_token %}
         <div class="form-group">
           <label for="recipient-name" class="col-form-label">Nombre Sprint</label>
@@ -26,18 +26,44 @@
         </div>
         <div class="form-group">
           <label for="recipient-name" class="col-form-label">Fecha de inicio</label>
-          <input type="date" class="form-control" id="recipient-name" name="fecha_inicio">
+          <input type="date" class="form-control" id="fecha" name="fecha_inicio">
         </div>
 
-        <a class="btn btn-danger btn-sm" href="{% url 'webApp:rolesProyecto' proyecto.id %}">Cancelar</a>
-        <button type="submit" class="btn btn-primary btn-sm">Guardar</button>
+        <input hidden="true" type="text" class="form-control" id="inicio-sprint" name="inicio-sprint"
+          value="{{proyecto.sprint_actual.fechaIni_sp}}">
+        <input hidden="true" type="text" class="form-control" id="fin-sprint" name="fin-sprint"
+          value="{{proyecto.sprint_actual.fechaFIn_sp}}">
+
+
       </form>
+      <a class="btn btn-danger btn-sm" href="{% url 'webApp:rolesProyecto' proyecto.id %}">Cancelar</a>
+      <button type="submit" id="btn-submit" class="btn btn-primary btn-sm">Guardar</button>
     </div>
   </div>
 </div>
 
-
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
-{% block javascripts %}{% endblock javascripts %}
+{% block javascripts %}
+<script>
+  $(document).ready(function () {
+    $("button#btn-submit").click(function () {
+      let fechaInicio = $("input#inicio-sprint").val()
+      let fechaFin = $("input#fin-sprint").val()
+      let fechaAux = $("input#fecha").val()
+      let aux = moment(fechaFin).format("YYYY/MM/DD")
+      let aux2 = moment(fechaAux).format("YYYY/MM/DD")
+      if (false) {
+        Swal.fire({
+          icon: 'error',
+          title: 'Fecha de Inicio Sprint Invalida',
+          text: `Fecha minima ${aux}`,
+        })
+      }else{
+        $("form#formSprint").submit()
+      }
+    })
+  })
+</script>
+{% endblock javascripts %}
