--- a/sistema_metodos_agiles/webApp/templates/home/usCrear.html
+++ b/sistema_metodos_agiles/webApp/templates/home/usCrear.html
@@ -29,7 +29,11 @@
         </div>
         <div class="form-group">
           <label for="recipient-name" class="col-form-label" >Prioridad de negocio</label>
-          <input type="number" class="form-control" id="recipient-name" name="prioridad">
+          <input type="number" class="form-control" id="recipient-name" name="prioridad-negocio" min="1" max="10">
+        </div>
+        <div class="form-group">
+          <label for="recipient-name" class="col-form-label" >Prioridad Tecnica</label>
+          <input type="number" class="form-control" id="recipient-name" name="prioridad-tecnica" min="1" max="10">
         </div>
         <div class="form-group">
           <select class="form-control" aria-label="Default select example" name="tipoUs">
