--- a/sistema_metodos_agiles/webApp/templates/home/sprintTablero.html
+++ b/sistema_metodos_agiles/webApp/templates/home/sprintTablero.html
@@ -53,7 +53,7 @@
             
                       </p>
                       <p class="card-text">Responsable: {{userStory.colaborador}}</p>
-                      <button class="btn btn-primary btn-sm">Ver</button>
+                      <button class="btn btn-primary btn-sm">Comentarios</button>
                     </div>
                   </div>
                  
