--- a/sistema_metodos_agiles/webApp/templates/home/tipoUSCrear.html
+++ b/sistema_metodos_agiles/webApp/templates/home/tipoUSCrear.html
@@ -25,7 +25,7 @@
         </div>
         <div class="form-group">
           <label for="recipient-name" class="col-form-label">Fases (Agregar las fases entre ,)</label>
-          <input type="text" class="form-control" id="prueba-id" name="prueba" value="Por hacer,Haciendo,Terminado">
+          <input type="text" class="form-control" id="prueba-id" name="prueba" value="TODO, DOING, DONE">
         </div>
           <input hidden="true" type="text" name="jsonFase" id="jsonFase">
       </form>
