--- a/sistema_metodos_agiles/webApp/templates/home/sprintAgregarColaborador.html
+++ b/sistema_metodos_agiles/webApp/templates/home/sprintAgregarColaborador.html
@@ -10,7 +10,7 @@
 <div class="container">
   <div class="card">
     <div class="card-header">
-      <h3>Crear Sprint</h3>
+      <h3>Agregar Colaborador</h3>
     </div>
     <div class="card-body">
       <form method="post" action="{% url 'webApp:sprintColaboradorAgregarGuardar' proyecto.id %}" id="formTus">
