--- a/sistema_metodos_agiles/webApp/templates/home/sprint.html
+++ b/sistema_metodos_agiles/webApp/templates/home/sprint.html
@@ -18,9 +18,10 @@
 <div class="container">
   {% for sp in sprint %}
 
-  <div class="card mx-3 w-75">
-    <div class="card-header">
-      <h3>Nombre: {{sp.nombre_sp}}</h3>
+  <div class='card mx-3 w-75 {% if sp.estado.descripcion == "EN PROGRESO" %} border border-success {% endif %}'>
+    <div class='card-header {% if sp.estado.descripcion == "EN PROGRESO" %} bg-success text-white {% endif %} '>
+    
+      <h3><strong>Nombre: {{sp.nombre_sp}}</strong></h3>
     </div>
     <div class="card-body">
       <div class="row">
@@ -44,7 +45,14 @@
           <a href="{% url 'webApp:sprintUsAgregar' proyecto.id sp.id %}" class="btn btn-sm btn-primary">Agregar US</a>
           {% endif %}
           {% if validacionPermisos.dsp_Colaborador_Sprint %}
-            <a href="{% url 'webApp:iniciarSprint' proyecto.id sp.id %}" class="btn btn-sm btn-success">Iniciar Sprint</a>
+          {% if not proyecto.sprint_actual %}
+          <a href="{% url 'webApp:iniciarSprint' proyecto.id sp.id %}" disabled="true" class="btn btn-sm btn-success">Iniciar Sprint</a>
+
+          {% else %}
+          <button class="btn btn-sm btn-success" disabled>Iniciar Sprint</button>
+          {% endif %}
+         
+           
           {% endif %}
           {% endif %}
           {% if sp.estado.descripcion == "EN PROGRESO" %}
