--- a/sistema_metodos_agiles/webApp/templates/home/sprint.html
+++ b/sistema_metodos_agiles/webApp/templates/home/sprint.html
@@ -14,7 +14,8 @@
     class="material-icons">add</i>Crear
   Nuevo Sprint</a>
 {% endif %}
-
+<a class="btn btn-info btn-sm" href="">
+Velocity Chart</a>
 <div class="container">
   {% for sp in sprint %}
 
@@ -37,6 +38,10 @@
           <a href="{% url 'webApp:sprintColaboradores' proyecto.id sp.id %}"
             class="btn btn-sm btn-primary">Colaboradores</a>
           {% endif %}
+          {% if True %}
+          <a href=""
+            class="btn btn-sm btn-info">Burdont Chart</a>
+          {% endif %}
           {% if validacionPermisos.dsp_SprinBack %}
           <a href="{% url 'webApp:sprintBacklog' proyecto.id sp.id %}" class="btn btn-sm btn-primary">Sprint Backlog</a>
           {% endif %}
@@ -44,7 +49,7 @@
           {% if validacionPermisos.dsp_Colaborador_Sprint %}
           <a href="{% url 'webApp:sprintUsAgregar' proyecto.id sp.id %}" class="btn btn-sm btn-primary">Agregar US</a>
           {% endif %}
-          {% if validacionPermisos.dsp_Colaborador_Sprint %}
+          {% if validacionPermisos.ini_sprint %}
           {% if not proyecto.sprint_actual %}
           <a href="{% url 'webApp:iniciarSprint' proyecto.id sp.id %}" disabled="true" class="btn btn-sm btn-success">Iniciar Sprint</a>
 
@@ -59,7 +64,7 @@
           {% if validacionPermisos.dsp_Tablero %}
           <a href="{% url 'webApp:sprintTablero' proyecto.id sp.id 0 %}" class="btn btn-sm btn-primary">Tablero</a>
           {% endif %}
-          {% if validacionPermisos.dsp_Colaborador_Sprint %}
+          {% if validacionPermisos.cancelar_sprint %}
             <a href="{% url 'webApp:cancelarSprint' proyecto.id sp.id %}" class="btn btn-sm btn-danger">Cancelar Sprint</a>
           {% endif %}
           {% endif %}
