--- a/sistema_metodos_agiles/webApp/templates/includes/sidebar.html
+++ b/sistema_metodos_agiles/webApp/templates/includes/sidebar.html
@@ -10,7 +10,7 @@
       <li class="nav-item {% if 'index' in segment %} active {% endif %}">
         <a class="nav-link" href="/">
           <i class="material-icons">assignment</i>
-          <p>Proyectos</p>
+          <p>HOME</p>
         </a>
       </li>
 
