--- a/sistema_metodos_agiles/webApp/templates/home/sprint.html
+++ b/sistema_metodos_agiles/webApp/templates/home/sprint.html
@@ -14,7 +14,7 @@
     class="material-icons">add</i>Crear
   Nuevo Sprint</a>
 {% endif %}
-<a class="btn btn-info btn-sm" href="">
+<a class="btn btn-info btn-sm" href="{% url 'webApp:visualizarVelocity' proyecto.id %}">
 Velocity Chart</a>
 <div class="container">
   {% for sp in sprint %}
